--- a/test.html
+++ b/test.html
@@ -47,12 +47,64 @@
 
 
   function find(name, array) {
-      let result = 0;
+      let result = null;
 
       for (let i = 0; i < array.length; i++){
         if (array[i] == name){
           result = i;
         };
+      };
+
+      return result;
+  }
+
+
+  function prime_factors(x) {
+      let result = '';
+      let i = 2;
+
+      while (i * i <= x){
+        if (x % i == 0){
+          result += `${i} `;
+          x = x / i
+       } else {
+          i++
+       };
+      };
+      
+      if (x > 1) {
+        result += `${x}`;
+      };
+    
+      return result;
+  }
+
+
+  function quadratic_equation(a, b, c) {
+      let result1  = null; let result2 = null;
+
+      let dis = Math.pow(b, 2) - 4 * a * c;
+
+      if (dis > 0) {
+        result1 = (-b + Math.sqrt(dis)) / 2 * a;
+        result2 = (-b - Math.sqrt(dis)) / 2 * a;
+
+      } else if (dis == 0) {
+        result1 = -b / 2 * a;
+      };
+
+      return result1, result2;
+  }
+
+
+  function abs(x) {
+      let result  = null;
+
+      if (x >= 0) {
+        result = x;
+
+      } else if (x < 0) {
+        result = x + x * -2;
       };
 
       return result;
